feat: allow snowflake streams to be created in separate schema
- reuse same datasource
- create proxy datasource that can set role/warehouse
- use String.format again
- still don't use a temp table (would not be able to use pooled connection and would have to implement other things), but DO drop the table when we are done with it
- set the default JDBC_DRIVER since we know what it is for snowflake