@@ -5,6 +5,8 @@ import java.sql.PreparedStatement;
 import java.sql.ResultSet;
 import java.sql.SQLException;
 import java.text.MessageFormat;
+import java.util.ArrayList;
+import java.util.List;
 import java.util.Map;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
@@ -43,6 +45,8 @@ public class SnowflakeImport extends AbstractTargetRedisImportCommand {
 	@ArgGroup(exclusive = false)
 	private DatabaseReaderArgs readerArgs = new DatabaseReaderArgs();
 
+	private static final String JDBC_DRIVER = "net.snowflake.client.jdbc.SnowflakeDriver";
+
 	private String cdcObject;
 	private String fullStreamName;
 	private String tempTable;
@@ -52,6 +56,18 @@ public class SnowflakeImport extends AbstractTargetRedisImportCommand {
 
 	@Option(names = "--snapshot-mode", description = "Snapshot mode: ${COMPLETION-CANDIDATES} . INITIAL is the default and will set the Snowflake Stream SHOW_INITIAL_ROWS=TRUE option", defaultValue = "INITIAL")
 	private SnapshotMode snapshotMode;
+
+	@Option(names = "--role", description = "Snowflake role to use")
+	private String role;
+
+	@Option(names = "--warehouse", description = "Snowflake warehouse to use")
+	private String warehouse;
+
+	@Option(names = "--cdc-database", description = "Snowflake CDC database to use for stream and temp table")
+	private String cdcDatabase;
+
+	@Option(names = "--cdc-schema", description = "Snowflake CDC schema to use for stream and temp table")
+	private String cdcSchema;
 
 	private String getCurrentOffset(Connection sqlConnection, String fullStreamName) throws SQLException {
 		String offsetSql = "SELECT SYSTEM$STREAM_GET_TABLE_TIMESTAMP(?)";
@@ -64,7 +80,7 @@ public class SnowflakeImport extends AbstractTargetRedisImportCommand {
 				return results.getString(1);
 			} else {
 				throw new RiotException(
-						"Could not retrieve current offset of Snowflake stream: %s".formatted(fullStreamName));
+						String.format("Could not retrieve current offset of Snowflake stream: %s", fullStreamName));
 			}
 		} catch (SQLException ex) {
 			if (ex.getMessage().contains("must be a valid stream name")) {
@@ -76,7 +92,7 @@ public class SnowflakeImport extends AbstractTargetRedisImportCommand {
 		}
 	}
 
-	private Runnable afterSuccess(Connection sqlConnection, RedisContext redisContext, String fullStreamName,
+	private Runnable afterSuccess(DataSource dataSource, RedisContext redisContext, String fullStreamName,
 			String offsetKey, String tempTable, String newOffset) {
 		RedisCommands<String, String> syncCommands = redisContext.getConnection().sync();
 
@@ -84,25 +100,37 @@ public class SnowflakeImport extends AbstractTargetRedisImportCommand {
 			syncCommands.set(offsetKey, newOffset);
 			log.debug("in snowflake import after success: stored offset {}={}", offsetKey, newOffset);
 
-			// TODO cleanup but ensure this doesn't interfere with any other tasks or jobs
-			// sqlConnection.prepareStatement(MessageFormat.format("DROP TABLE {0}",
-			// tempTable)).execute();
-		};
+            try (Connection sqlConnection = dataSource.getConnection()) {
+                sqlConnection.prepareStatement(String.format("DROP TABLE %s", tempTable)).execute();
+            } catch (SQLException e) {
+                throw new RiotException(String.format("Unable to drop temp table: %s", tempTable), e);
+            }
+        };
 	}
 
-	private String initStatement(String currentOffset, String fullStreamName) {
+	private PreparedStatement initStatement(Connection connection, String currentOffset, String fullStreamName) throws SQLException {
 		String initStatement = null;
+		boolean setParam = false;
+
 		if (currentOffset != null && !currentOffset.equals("0")) {
-			initStatement = "CREATE OR REPLACE STREAM %s ON TABLE %s AT (TIMESTAMP => TO_TIMESTAMP(?))"
-					.formatted(fullStreamName, cdcObject);
+			initStatement = String.format("CREATE OR REPLACE STREAM %s ON TABLE %s AT (TIMESTAMP => TO_TIMESTAMP(?))",
+					fullStreamName, cdcObject);
+			setParam = true;
 		} else {
-			initStatement = "CREATE OR REPLACE STREAM %s ON TABLE %s".formatted(fullStreamName, cdcObject);
+			initStatement = String.format("CREATE OR REPLACE STREAM %s ON TABLE %s", fullStreamName, cdcObject);
 
 			if (snapshotMode == SnapshotMode.INITIAL) {
 				initStatement += " SHOW_INITIAL_ROWS=TRUE";
 			}
 		}
-		return initStatement;
+
+		PreparedStatement preparedInitStatement = connection.prepareStatement(initStatement);
+		log.debug("initStatement: {}", initStatement);
+		if (setParam) {
+			preparedInitStatement.setString(1, currentOffset);
+		}
+
+		return preparedInitStatement;
 	}
 
 	@Override
@@ -119,20 +147,23 @@ public class SnowflakeImport extends AbstractTargetRedisImportCommand {
 			String schema = objectMatcher.group("schema");
 			String simpleTable = objectMatcher.group("table");
 
-			String streamName = "%s_changestream".formatted(simpleTable);
-			fullStreamName = "%s.%s.%s".formatted(database, schema, streamName);
-			tempTable = "%s_temp".formatted(fullStreamName);
+			String useDatabase = cdcDatabase != null ? cdcDatabase : database;
+			String useSchema = cdcSchema != null ? cdcSchema : schema;
 
-			offsetKey = MessageFormat.format("riotx:offset:{0}", fullStreamName);
+			String streamName = String.format("%s_changestream", simpleTable);
+			fullStreamName = String.format("%s.%s.%s", useDatabase, useSchema, streamName);
+			tempTable = String.format("%s_temp", fullStreamName);
+
+			offsetKey = String.format("riotx:offset:%s", fullStreamName);
 
 			redisContext = this.targetRedisContext();
 			redisContext.afterPropertiesSet();
 
 			cdcObject = tableOrView;
-			sql = "SELECT * FROM %s".formatted(tempTable);
+			sql = String.format("SELECT * FROM %s", tempTable);
 		} else {
 			throw new RiotException(
-					"Must provide table or view in format: DATABASE.SCHEMA.TABLE, found %s".formatted(tableOrView));
+					String.format("Must provide table or view in format: DATABASE.SCHEMA.TABLE, found %s", tableOrView));
 		}
 	}
 
@@ -141,17 +172,36 @@ public class SnowflakeImport extends AbstractTargetRedisImportCommand {
 		return job(step(reader()));
 	}
 
+	private String sanitize(String value) {
+		return value.replaceAll("[^a-zA-Z0-9]", "_");
+	}
+
 	protected JdbcCursorItemReader<Map<String, Object>> reader() {
 		DataSource dataSource;
+		List<String> initSqlStatements = new ArrayList<>();
+		JdbcCursorItemReader<Map<String, Object>> reader;
+
+		if (role != null) {
+			initSqlStatements.add(String.format("USE ROLE %s", sanitize(role)));
+		}
+		if (warehouse != null) {
+			initSqlStatements.add(String.format("USE WAREHOUSE %s", sanitize(warehouse)));
+		}
+
 		try {
-			dataSource = dataSourceArgs.dataSource();
+			dataSourceArgs.setDriver(JDBC_DRIVER);
+			dataSource = new InitSqlDataSource(dataSourceArgs.dataSource(), initSqlStatements);
+			reader = JdbcCursorItemReaderFactory.create(readerArgs)
+					.sql(sql)
+					.name(sql)
+					.dataSource(dataSource)
+					.preparedStatementSetter(ps -> setValues(dataSource, ps))
+					.build();
 		} catch (Exception e) {
 			throw new RiotException("Could not initialize data source", e);
 		}
-		JdbcCursorItemReaderBuilder<Map<String, Object>> reader = JdbcCursorItemReaderFactory.create(sql,
-				dataSourceArgs, readerArgs);
-		reader.preparedStatementSetter(ps -> setValues(dataSource, ps));
-		return reader.build();
+
+		return reader;
 	}
 
 	private void setValues(DataSource dataSource, PreparedStatement ps) throws SQLException {
@@ -160,31 +210,18 @@ public class SnowflakeImport extends AbstractTargetRedisImportCommand {
 			RedisCommands<String, String> syncCommands = connection.sync();
 			String currentOffset = syncCommands.get(offsetKey);
 
-			String initStatement = initStatement(currentOffset, fullStreamName);
-
-			// TODO figure out why we cant use a temp table here - could be multiple
-			// different connection/sessions use it
-			String initTempTable = "CREATE OR REPLACE TABLE %s AS SELECT * FROM %s".formatted(tempTable,
-					fullStreamName);
-
-			// initialize stream and copy data to temp table
-			log.info("initStatement: {}", initStatement);
-
-			PreparedStatement preparedInitStatement = dbConnection.prepareStatement(initStatement);
-			if (initStatement.contains("?")) {
-				preparedInitStatement.setString(1, currentOffset);
-			}
-
+			PreparedStatement preparedInitStatement = initStatement(dbConnection, currentOffset, fullStreamName);
 			preparedInitStatement.execute();
-			log.debug("initialized stream: {}", initStatement);
 
+			String initTempTable = String.format("CREATE OR REPLACE TABLE %s AS SELECT * FROM %s", tempTable,
+					fullStreamName);
 			dbConnection.prepareStatement(initTempTable).execute();
 			log.debug("initialized temp table: {}", initTempTable);
 
 			// now that data has been copied from temp table get the new current offset
 			// don't commit it to redis until the job is successful
 			String newOffset = getCurrentOffset(dbConnection, fullStreamName);
-			onJobSuccessCallback = afterSuccess(dbConnection, redisContext, fullStreamName, offsetKey, tempTable,
+			onJobSuccessCallback = afterSuccess(dataSource, redisContext, fullStreamName, offsetKey, tempTable,
 					newOffset);
 		}
 	}
